--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -71,6 +71,10 @@
   font-weight: 700;
 }
 
+.project-card p {
+  color: #969695;
+}
+
 .project {
   display: flex;
   flex-wrap: wrap;
